# AleRust

./: Cargo.toml
src/: main.rs
